apps/spring-petclinic/obs/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: spring-petclinic
  namespace: spring-petclinic
spec:
  parentRefs:
  - name: main-gateway
    namespace: istio-system
  hostnames:
  - spring-petclinic.saadisfy.me
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: spring-petclinic
      port: 8080
